k8s/gateway/vald/deployment.yaml
---
#
# Copyright (C) 2019-2020 Vdaas.org Vald team ( kpango, rinx, kmrmt )
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vald-gateway
  labels:
    app: vald-gateway
    app.kubernetes.io/name: vald
    helm.sh/chart: vald-v0.0.64
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: v0.0.64
    app.kubernetes.io/component: gateway
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: vald-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vald-gateway
        app.kubernetes.io/name: vald
        app.kubernetes.io/instance: RELEASE-NAME
        app.kubernetes.io/component: gateway
      annotations:
        checksum/configmap: 791b5e6836a2ae1322f1ff12265eca497f7b713a85252f717be5ef2c00dbf102
        profefe.com/enable: "true"
        profefe.com/port: "6060"
        profefe.com/service: vald-gateway
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution: []
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution: []
          requiredDuringSchedulingIgnoredDuringExecution: []
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - vald-gateway
                topologyKey: kubernetes.io/hostname
              weight: 100
          requiredDuringSchedulingIgnoredDuringExecution: []
      containers:
        - name: vald-gateway
          image: "vdaas/vald-gateway:nightly"
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /liveness
              port: liveness
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /readiness
              port: readiness
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 2
          ports:
            - name: liveness
              protocol: TCP
              containerPort: 3000
            - name: readiness
              protocol: TCP
              containerPort: 3001
            - name: grpc
              protocol: TCP
              containerPort: 8081
            - name: pprof
              protocol: TCP
              containerPort: 6060
          resources:
            limits:
              cpu: 2000m
              memory: 700Mi
            requests:
              cpu: 100m
              memory: 50Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: vald-gateway-config
              mountPath: /etc/server/
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: vald-gateway-config
          configMap:
            defaultMode: 420
            name: vald-gateway-config
      priorityClassName: default-vald-gateway-priority
status:
