k8s/gateway/vald/ing.yaml
---
#
# Copyright (C) 2019-2020 Vdaas.org Vald team ( kpango, rinx, kmrmt )
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: networking.k8s.io/v1beta1
# apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/grpc-backend: "true"
  labels:
    name: vald-gateway-ingress
    app: vald-gateway-ingress
    app.kubernetes.io/name: vald
    helm.sh/chart: vald-v0.0.62
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: v0.0.62
    app.kubernetes.io/component: gateway
  name: vald-gateway-ingress
spec:
  rules:
    - host: vald.gateway.vdaas.org
      http:
        paths:
          - backend:
              serviceName: vald-gateway
              servicePort: grpc
